add db schema api

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
 USERNAME=tonygupta275
 # PASSWORD=m397MnQbohjBMbxI
 PASSWORD=cSo8iUmLQjEN6umi
+URL=mongodb+srv://tonygupta275:cSo8iUmLQjEN6umi@crud-app.oq6gpvh.mongodb.net/crud-app?retryWrites=true&w=majority&appName=crud-app
