--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,4 @@ USERNAME=tonygupta275
 # PASSWORD=m397MnQbohjBMbxI
 PASSWORD=cSo8iUmLQjEN6umi
 URL=mongodb+srv://tonygupta275:cSo8iUmLQjEN6umi@crud-app.oq6gpvh.mongodb.net/crud-app?retryWrites=true&w=majority&appName=crud-app
+TOKEN_KEY=12345thbvd4564erfwrgftf$WIREW$*RINF(*$NU)
